<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 상단 바 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="4dp"
        android:background="@color/G000">

        <!-- 뒤로가기 버튼 -->
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="8dp"
            android:layout_height="17dp"
            android:background="@color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            android:layout_marginTop="22dp"
            android:layout_marginStart="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 상단 타이틀 -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/G900"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginTop="17dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 스크롤 뷰 -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/G000"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- 약관 및 정책 -->

            <TextView
                android:id="@+id/policy_title"
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/policy_title"
                android:textColor="@color/G700"
                android:textSize="21sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <!-- 이용약관 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/terms_of_service"
                        android:textSize="17sp"
                        android:fontFamily="@font/pretendard_medium"
                        android:textColor="@color/G800" />

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="17dp"
                        android:src="@drawable/ic_expand"
                        android:contentDescription="@string/terms_of_service"
                        app:tint="@color/G300"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <!-- 구분선 -->
                <ImageView
                    android:layout_width="320dp"
                    android:layout_height="1dp"
                    android:src="@drawable/ic_divider"
                    android:contentDescription="@string/terms_of_service"
                    app:tint="@color/G200"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <!-- 개인정보 처리 방침 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/privacy_policy"
                        android:textSize="17sp"
                        android:fontFamily="@font/pretendard_medium"
                        android:textColor="@color/G800" />

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="17dp"
                        android:src="@drawable/ic_expand"
                        android:contentDescription="@string/terms_of_service"
                        app:tint="@color/G300"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <!-- 구분선 -->
                <ImageView
                    android:layout_width="320dp"
                    android:layout_height="1dp"
                    android:src="@drawable/ic_divider"
                    android:contentDescription="@string/terms_of_service"
                    app:tint="@color/G200"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <!-- 위치정보 이용 약관 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location_terms"
                        android:textSize="17sp"
                        android:fontFamily="@font/pretendard_medium"
                        android:textColor="@color/G800" />

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="17dp"
                        android:src="@drawable/ic_expand"
                        android:contentDescription="@string/terms_of_service"
                        app:tint="@color/G300"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <!-- 구분선 -->
                <ImageView
                    android:layout_width="320dp"
                    android:layout_height="1dp"
                    android:src="@drawable/ic_divider"
                    android:contentDescription="@string/terms_of_service"
                    app:tint="@color/G200"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <!-- 마케팅 정보 수신 동의 약관 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/marketing_agreement"
                        android:textSize="17sp"
                        android:fontFamily="@font/pretendard_medium"
                        android:textColor="@color/G800" />

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="17dp"
                        android:src="@drawable/ic_expand"
                        android:contentDescription="@string/terms_of_service"
                        app:tint="@color/G300"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

                <!-- 구분선 -->
                <ImageView
                    android:layout_width="320dp"
                    android:layout_height="1dp"
                    android:src="@drawable/ic_divider"
                    android:contentDescription="@string/terms_of_service"
                    app:tint="@color/G200"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>

            <!-- 버전 정보 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/version_info"
                    android:fontFamily="@font/pretendard_bold"
                    android:textSize="21sp"
                    android:textColor="@color/G800" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_placeholder"
                    android:textColor="@color/G800"
                    android:fontFamily="@font/pretendard_medium"
                    android:textSize="17sp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
                </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_gravity="bottom">

        <!-- 하단 버튼 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- 왼쪽 텍스트 -->
            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/pretendard_medium"
                android:gravity="start"
                android:text="@string/logout"
                android:textColor="@color/G800"
                android:textSize="13sp" />

            <!-- 오른쪽 텍스트 -->
            <TextView
                android:id="@+id/tv_delete_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/pretendard_medium"
                android:gravity="end"
                android:text="@string/delete_account"
                android:textColor="@color/G800"
                android:textSize="13sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
