<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/G000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="4dp"
        android:background="@color/G000">

        <!-- 뒤로가기 버튼 -->
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="8dp"
            android:layout_height="17dp"
            android:background="@color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            android:layout_marginTop="22dp"
            android:layout_marginStart="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 상단 타이틀 -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locker_title"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/G900"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginTop="17dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 펜슬 버튼 -->
        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_pencil"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- 내용 스크롤 -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- 사진 슬라이드 -->
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/photoViewPager"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginBottom="16dp" />

            <!-- 제목 -->
            <TextView
                android:id="@+id/memoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memory_title"
                android:textSize="23sp"
                android:fontFamily="@font/pretendard_bold"
                android:layout_marginBottom="8dp" />

            <!-- 날짜와 친구 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp">

                <!-- 날짜 -->
                <ImageView
                    android:src="@drawable/ic_date"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/memoryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memory_date"
                    android:textSize="17sp"
                    android:fontFamily="@font/pretendard_medium"
                    android:textColor="@color/G600"
                    android:layout_marginEnd="16dp" />

                <!-- 친구 -->
                <ImageView
                    android:src="@drawable/ic_friend"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/memoryFriend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memory_friend"
                    android:textSize="17sp"
                    android:fontFamily="@font/pretendard_medium"
                    android:textColor="@color/G600" />
            </LinearLayout>

            <!-- 내용 -->
            <TextView
                android:id="@+id/memoryContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memory_content"
                android:textSize="16sp"
                android:textColor="@color/G800"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
