<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/popupCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/circle_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <!-- 이미지 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/imgCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgPopup"
                    android:layout_width="121dp"
                    android:layout_height="121dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_icon_white_img" />
            </androidx.cardview.widget.CardView>

            <!-- 텍스트 정보 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/imgCard"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="10dp">

                <!-- 제목 -->
                <TextView
                    android:id="@+id/tvPopupTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPopupTitle"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/G900"
                    android:layout_marginTop="11dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- 날짜 및 작성자 -->
                <TextView
                    android:id="@+id/tvPopupDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPopupDate"
                    android:textSize="12sp"
                    android:textColor="@color/G600"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPopupTitle"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- 설명 -->
                <TextView
                    android:id="@+id/tvPopupDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPopupDescription"
                    android:textSize="12sp"
                    android:textColor="@color/G800"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvPopupDate"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- 추가하기 버튼 -->
    <ImageButton
        android:id="@+id/circle_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:src="@drawable/ic_circle_plus_btn"
        app:layout_constraintEnd_toEndOf="@id/popupCard"
        app:layout_constraintBottom_toTopOf="@id/popupCard" />

</androidx.constraintlayout.widget.ConstraintLayout>
